testsuite/deprecated/veronac/elaboration/compile-fail/multiple-clauses.verona
// Copyright Microsoft and Project Verona Contributors.
// SPDX-License-Identifier: MIT
class A {}
class Main
{
  // CHECK-L: multiple-clauses.verona:${LINE:+5}:7: error: Found multiple where clauses for 'x'
  // CHECK-L: multiple-clauses.verona:${LINE:+3}:7: note: Previous where clause for 'x' was here
  multiple_where_variables1(self: mut, x: A & mut)
    where
      x in self,
      x in self
  { }

  // CHECK-L: multiple-clauses.verona:${LINE:+5}:7: error: Found multiple where clauses for 'x'
  // CHECK-L: multiple-clauses.verona:${LINE:+3}:7: note: Previous where clause for 'x' was here
  multiple_where_variables2(self: mut, x: A & mut, y: A & mut)
    where
      x in self,
      x in y
  { }

  // CHECK-L: multiple-clauses.verona:${LINE:+6}:7: error: Found multiple where clauses for 'x'
  // CHECK-L: multiple-clauses.verona:${LINE:+3}:7: note: Previous where clause for 'x' was here
  multiple_where_variables3(self: mut, x: A & mut, y: A & mut)
    where
      x in self,
      y in self,
      x in self
  { }

  // CHECK-L: multiple-clauses.verona:${LINE:+5}:7: error: Found multiple where clauses for 'return'
  // CHECK-L: multiple-clauses.verona:${LINE:+3}:7: note: Previous where clause for 'return' was here
  multiple_where_return1(self: mut)
    where
      return in self,
      return in self
  { }

  // CHECK-L: multiple-clauses.verona:${LINE:+5}:7: error: Found multiple where clauses for 'return'
  // CHECK-L: multiple-clauses.verona:${LINE:+3}:7: note: Previous where clause for 'return' was here
  multiple_where_return2(self: mut)
    where
      return in self,
      return from self
  { }

  // CHECK-L: multiple-clauses.verona:${LINE:+5}:7: error: Found multiple where clauses for 'return'
  // CHECK-L: multiple-clauses.verona:${LINE:+3}:7: note: Previous where clause for 'return' was here
  multiple_where_return3(self: mut, x: A & mut)
    where
      return in self,
      return in x
  { }

  main() {}
}
